Tried fixing banner on mobile screens. Apparently it already works my phone is just stupid.

--- a/projects/personal-portfolio/src/css/styles.css
+++ b/projects/personal-portfolio/src/css/styles.css
@@ -43,6 +43,7 @@ body {
   position: absolute;
   left: 50%;
   top: 50%;
+  transform: translate(-50%, -50%);
   z-index: 1;
   width: 150px;
   height: 150px;
@@ -162,10 +163,13 @@ BANNER
   height: 108vh;
   background-color: #1f1f1f;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/bg.jpg");
-  background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   position: relative;
   transition: all .2s ease-in-out;
   z-index: 0000;
@@ -354,8 +358,13 @@ CONTACT
 
 .contact-copy {
   line-height: 150%;
-  font-size: 1.5em;
-  text-align: justify;
+  font-size: 1.2em;
+  text-align: center;
+}
+
+.contact-container .fa,
+.contact-container a {
+  font-size: .7em;
 }
 
 /***************
@@ -403,21 +412,6 @@ footer .nav li a:link {
 
 /***************
 
-OMNIFOOD PAGE
-
-****************/
-
-.omnifood-banner {
-  height: 25vh;
-  background-image: url("../img/omnifood-bg.jpeg");
-  background-size: cover;
-  background-position: center center;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-}
-
-/***************
-
 MEDIA QUERIES
 
 ****************/
@@ -446,7 +440,7 @@ MEDIA QUERIES
   footer .nav {
     width: 100%;
     text-align: center;
-    font-size: 2em;
+    font-size: 1em;
   }
 }
 
@@ -491,10 +485,6 @@ MEDIA QUERIES
 
   ****************/
 
-  .banner {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/mobile-bg.jpg");
-  }
-
   .banner-text h1 {
     font-size: 2em;
     letter-spacing: 0;
@@ -513,15 +503,27 @@ MEDIA QUERIES
   .section-header {
     font-size: 1.5em;
   }
-}
 
-@media (max-width: 572px) {
-  .section-header {
-    font-size: 1.4em;
+  /***************
+
+  CONTACT
+
+  ****************/
+
+  .contact-header {
+    font-size: 1.5em !important;
+  }
+
+  .contact-copy {
+    text-align: center;
+  }
+
+  .contact-container {
+    text-align: center;
   }
 }
 
-@media (max-width: 542px) {
+@media (max-width: 572px) {
   .section-header {
     font-size: 1.3em;
   }
@@ -533,6 +535,12 @@ MEDIA QUERIES
   }
 }
 
+@media (max-width: 480px) {
+  .banner {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/mobile-bg.jpg");
+  }
+}
+
 @media (max-width: 483px) {
   .section-header {
     font-size: 1.1em;
@@ -540,12 +548,6 @@ MEDIA QUERIES
 }
 
 @media (max-width: 454px) {
-  .section-header {
-    font-size: 1em;
-  }
-}
-
-@media (max-width: 400px) {
   .section-header {
     font-size: .9em;
   }
